--- a/examples/tests/org.jboss.tools.project.examples.test/pom.xml
+++ b/examples/tests/org.jboss.tools.project.examples.test/pom.xml
@@ -13,7 +13,7 @@
 	<packaging>eclipse-test-plugin</packaging>
 
 	<properties>
-		<systemProperties>-Djbosstools.test.jboss.home.4.2=${project.build.directory}/jboss-4.2.3.GA -Djbosstools.test.seam.2.0.1.GA.home=${project.build.directory}/jboss-seam-2.0.1.GA</systemProperties>
+		<systemProperties>-Djbosstools.test.jboss.home.4.2=${requirementsDirectory}/jboss-4.2.3.GA -Djbosstools.test.seam.2.0.1.GA.home=${requirementsDirectory}/jboss-seam-2.0.1.GA</systemProperties>
 	</properties>
 	<build>
 		<plugins>
@@ -36,7 +36,6 @@
 									<type>zip</type>
 								</artifactItem>
 							</artifactItems>
-							<outputDirectory>${project.build.directory}</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
@@ -44,7 +43,6 @@
 			<plugin>
 				<groupId>com.googlecode.maven-download-plugin</groupId>
 				<artifactId>maven-download-plugin</artifactId>
-				<version>0.2-SNAPSHOT</version>
 				<executions>
 					<execution>
 						<id>install-seam</id>
@@ -55,7 +53,6 @@
 						<configuration>
 							<url>http://repository.jboss.org/sourceforge/jboss-seam-2.0.1.GA.zip</url>
 							<unpack>true</unpack>
-							<outputDirectory>${project.build.directory}</outputDirectory>
 							<md5>0a1accf94fd37e40ab1091ee593b8b75</md5>
 						</configuration>
 					</execution>
