updated based on QE review
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@42193 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/docs/reference/pom.xml
+++ b/maven/docs/reference/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
 		<translation>en-US</translation>
 		<docname>Maven_Tools_Reference_Guide</docname>
-		<bookname>Maven_Tools_Reference_Guide</bookname>
+		<bookname>Maven Tools Reference Guide</bookname>
 	</properties>
 
 	<profiles>
