typo - should be 'Configurator' to be consistent w/ all the others
git-svn-id: http://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.3.x@42309 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/features/org.jboss.tools.maven.jdt.feature/feature.properties
+++ b/maven/features/org.jboss.tools.maven.jdt.feature/feature.properties
@@ -15,7 +15,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=JBoss Maven Endorsed Libraries configurator
+featureName=JBoss Maven Endorsed Libraries Configurator
 
 # "providerName" property - name of the company that provides the feature
 providerName=JBoss by Red Hat
