--- a/maven/features/org.jboss.tools.maven.jbosspackaging.feature/feature.properties
+++ b/maven/features/org.jboss.tools.maven.jbosspackaging.feature/feature.properties
@@ -15,7 +15,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=JBoss Packaging Maven Configurators
+featureName=JBoss Tools Maven Packaging Configurator
 
 # "providerName" property - name of the company that provides the feature
 providerName=JBoss by Red Hat
