--- a/maven/features/org.jboss.tools.maven.sourcelookup.feature/feature.properties
+++ b/maven/features/org.jboss.tools.maven.sourcelookup.feature/feature.properties
@@ -15,7 +15,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=JBoss Tools Source Lookup
+featureName=JBoss Tools Maven Source Lookup
 
 # "providerName" property - name of the company that provides the feature
 providerName=JBoss by Red Hat
