JBIDE-12278: Fix path to build.xml file
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@42332 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/site/pom.xml
+++ b/central/site/pom.xml
@@ -26,7 +26,7 @@
 							<tasks>
 								<!-- called AFTER generating update site + zip to add in extra content -->
 								<!-- <ant antfile="build.xml" target="generate.directory.xml.only" dir="../../build/aggregate/"> -->
-								<ant antfile="build.xml" target="basic.build" dir="../../build/aggregate/">
+								<ant antfile="build.xml" target="basic.build" dir="../../../../build/aggregate/">
 									<property name="output.dir" value="${basedir}" />
 									<property name="inputRepo"
 										value="${jbosstools-nightly-staging-composite}" />
