--- a/maven/features/pom.xml
+++ b/maven/features/pom.xml
@@ -25,7 +25,7 @@
 		<module>org.jboss.tools.maven.jbosspackaging.feature</module>	
 		<module>org.jboss.tools.maven.jpa.feature</module>
 		<module>org.jboss.tools.maven.profiles.feature</module>
-		<!--module>org.jboss.tools.maven.gwt.feature</module-->
+		<!-- JBIDE-12287 temporarily removed <module>org.jboss.tools.maven.gwt.feature</module> -->
 		<module>org.jboss.tools.maven.sourcelookup.feature</module>
 	        <module>org.jboss.tools.maven.jdt.feature</module>
      </modules>
