Fix failing tests in Maven component after the move to Juno
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@42438 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/tests/org.jboss.tools.maven.configurators.tests/projects/jboss-sar/jboss-sar-2/pom.xml
+++ b/maven/tests/org.jboss.tools.maven.configurators.tests/projects/jboss-sar/jboss-sar-2/pom.xml
@@ -17,6 +17,11 @@
 				<excludeAll>true</excludeAll>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
+			</plugin>
 		</plugins>	
 	</build>
 	<dependencies>
