--- a/maven/tests/org.jboss.tools.maven.configurators.tests/projects/jboss-sar/jboss-sar-1/pom.xml
+++ b/maven/tests/org.jboss.tools.maven.configurators.tests/projects/jboss-sar/jboss-sar-1/pom.xml
@@ -14,14 +14,19 @@
 				<!-- Enable packaging types and lifecycle bindings. -->
 				<extensions>true</extensions>
 				<configuration>
-				<archive>
-				<manifest>
-					 <addClasspath>true</addClasspath>
-				</manifest>
-				</archive>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+						</manifest>
+					</archive>
 				</configuration>
 			</plugin>
-		</plugins>	
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
+			</plugin>
+		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
