--- a/maven/tests/org.jboss.tools.maven.configurators.tests/projects/jboss-sar/jboss-sar-3/pom.xml
+++ b/maven/tests/org.jboss.tools.maven.configurators.tests/projects/jboss-sar/jboss-sar-3/pom.xml
@@ -20,6 +20,11 @@
 				</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
+			</plugin>			
 		</plugins>	
 	</build>
 	<dependencies>
