fix order of Mylyn connectors in Central (JBDS-2219, JBDS-2220, JBDS-2221)
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@42477 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central.discovery/plugin.xml
+++ b/central/plugins/org.jboss.tools.central.discovery/plugin.xml
@@ -283,11 +283,11 @@
       <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.scm"
             groupId="org.jboss.tools.central.discovery.scm.git"
-            description="Mylyn support for Git and GitHub"
+            description="Mylyn support for Eclipse EGit and GitHub"
             id="org.eclipse.egit.mylyn"
             kind="task"
             license="Free, EPL"
-            name="Mylyn support for Eclipse EGit + GitHub"
+            name="Eclipse EGit: Mylyn Support"
             provider="eclipse.org"
             siteUrl="http://download.jboss.org/jbosstools/updates/development/juno/central/core/">
 	<iu id="org.eclipse.jgit"/>
@@ -337,7 +337,7 @@
             id="org.tigris.subversion.subclipse.mylyn"
             kind="task"
             license="Free, Subclipse License"
-            name="Mylyn for Subclipse + SVNKit"
+            name="Subclipse + SVNKit: Mylyn Support"
             provider="tigris.org"
             siteUrl="http://download.jboss.org/jbosstools/updates/development/juno/central/core/">
 	<iu id="org.tigris.subversion.subclipse"/>
