https://issues.jboss.org/browse/JBDS-2241 add sources to JBT Central so they can be found downstream by JBDS build
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@42491 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/pom.xml
+++ b/central/pom.xml
@@ -14,6 +14,9 @@
 	<name>central.all</name>
 	<packaging>pom</packaging>
 	 <!-- 
+		Note: building the update site for this component may require that you first build 
+		the tycho plugins in ../build/tycho-plugins/, if they can't be resolved from Nexus.
+	
 		mvn clean install
 			or
 		mvn clean install -B -U -fae -e -P jbosstools-nightly-staging-composite,jboss-requirements-composite-mirror,jboss-requirements-composite-extras-mirror,local.site -Dlocal.site=file://home/nboldt/tmp/JBT_REPO_Indigo/
