--- a/maven/plugins/pom.xml
+++ b/maven/plugins/pom.xml
@@ -27,7 +27,7 @@
         <module>org.jboss.tools.maven.jpa</module>
 		<module>org.jboss.tools.maven.profiles.core</module>        
 		<module>org.jboss.tools.maven.profiles.ui</module>
-		<!-- JBIDE-12287 temporarily removed <module>org.jboss.tools.maven.gwt</module> -->
+		<module>org.jboss.tools.maven.gwt</module>
 		<module>org.jboss.tools.maven.sourcelookup.core</module>
 		<module>org.jboss.tools.maven.sourcelookup.ui</module> 
 		<module>org.jboss.tools.maven.jdt</module>
