--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>org.jboss.tools</groupId>
 	<artifactId>maven</artifactId>
 	<version>1.4.0-SNAPSHOT</version>
-	<name>maven.all</name>	
+	<name>maven.all</name>
 	<packaging>pom</packaging>
 	<modules>
 		<module>features</module>
@@ -19,10 +19,24 @@
 		<module>tests</module>
 		<module>site</module>
 	</modules>
+	<repositories>
+		<repository>
+			<id>jbosstools-m2e-wtp-mirror</id>
+			<layout>p2</layout>
+			<url>http://download.jboss.org/jbosstools/updates/requirements/m2eclipse/m2e-wtp-juno/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 	<build>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
