--- a/central/site/pom.xml
+++ b/central/site/pom.xml
@@ -33,7 +33,7 @@
 							<symbols>
 								<update.site.name>JBoss Tools - Central</update.site.name>
 								<update.site.description>${update.site.description}</update.site.description>
-								<update.site.version>${JBT_VERSION} ${qualifier}</update.site.version>
+								<update.site.version>${JBT_VERSION} ${buildQualifier}</update.site.version>
 								<target.eclipse.version>${targetEclipseVersion}</target.eclipse.version>
 							</symbols>
 						</configuration>
