JBIDE-8973 : initial jar conversion plugin import
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@42694 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/pom.xml
+++ b/maven/plugins/pom.xml
@@ -30,6 +30,7 @@
 		<module>org.jboss.tools.maven.gwt</module>
 		<module>org.jboss.tools.maven.sourcelookup.core</module>
 		<module>org.jboss.tools.maven.sourcelookup.ui</module> 
+		<module>org.jboss.tools.maven.conversion.ui</module>
 		<module>org.jboss.tools.maven.jdt</module>
      </modules>
 </project>
