updated with 3.3.1 content
git-svn-id: http://svn.jboss.org/repos/jbosstools/tags/jbosstools-3.3.1.Final@42793 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/docs/reference/pom.xml
+++ b/maven/docs/reference/pom.xml
@@ -10,8 +10,8 @@
 
 	<properties>
 		<translation>en-US</translation>
-		<docname>Maven_Reference_Guide</docname>
-		<bookname>Maven_Reference_Guide</bookname>
+		<docname>Maven_Tools_Reference_Guide</docname>
+		<bookname>Maven Tools Reference Guide</bookname>
 	</properties>
 
 	<profiles>
