--- a/central/plugins/org.jboss.tools.central/plugin.xml
+++ b/central/plugins/org.jboss.tools.central/plugin.xml
@@ -264,5 +264,13 @@
 			<newWizardShortcut id="org.jboss.tools.central.wizards.NewGwtProjectWizard"/>
 		</perspectiveExtension>
    </extension>
+   <extension
+         point="org.eclipse.e4.ui.css.swt.theme">
+      <theme
+            basestylesheeturi="css/jbt.css"
+            id="org.jboss.tools.central.theme"
+            label="JBoss Tools &amp; Developer Studio">
+      </theme>
+   </extension>
    
 </plugin>
