--- a/central/plugins/org.jboss.tools.central/build.properties
+++ b/central/plugins/org.jboss.tools.central/build.properties
@@ -12,5 +12,5 @@ bin.includes = plugin.xml,\
                about.mappings,\
                about.properties,\
                jboss_about.png,\
-               css/,
+               css/,\
                lib/ocpsoft-pretty-time-1.0.7.jar
