JBIDE-12314 : move all the identification and remote repository management parts to the maven core/ui plugins.
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@43261 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.core/build.properties
+++ b/maven/plugins/org.jboss.tools.maven.core/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                poms/,\
                plugin.properties,\
-               about.html
+               about.html,\
+               lib/nexus-indexer-lucene-rest-api-client.jar
