JBIDE-12314 : Add JUnit tests for the identification part
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@43262 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/tests/pom.xml
+++ b/maven/tests/pom.xml
@@ -14,6 +14,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>org.jboss.tools.maven.configurators.tests</module>
+		<module>org.jboss.tools.maven.common.test</module>
 		<module>org.jboss.tools.maven.profiles.test</module>
 		<module>org.jboss.tools.maven.ui.bot.test</module>
 	</modules>
