JBDS-2250: Added a JBoss community theme following advices from JBoss branding corporate page
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@43264 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central/plugin.xml
+++ b/central/plugins/org.jboss.tools.central/plugin.xml
@@ -271,6 +271,11 @@
             id="org.jboss.tools.central.theme"
             label="JBoss Tools &amp; Developer Studio">
       </theme>
+      <theme
+            basestylesheeturi="css/jboss.css"
+            id="org.jboss.tools.central.communityTheme"
+            label="JBoss Community Theme">
+      </theme>
    </extension>
    
 </plugin>
