Fix failing build by removing missing lib/ entry in build.properties
git-svn-id: http://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.3.x@43315 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.sourcelookup.core/build.properties
+++ b/maven/plugins/org.jboss.tools.maven.sourcelookup.core/build.properties
@@ -8,5 +8,4 @@ bin.includes = META-INF/,\
                about.mappings,\
                about.ini,\
                about.html,\
-               jboss_about.png,\
-               lib/
+               jboss_about.png
