--- a/maven/plugins/org.jboss.tools.maven.sourcelookup.core/build.properties
+++ b/maven/plugins/org.jboss.tools.maven.sourcelookup.core/build.properties
@@ -8,4 +8,5 @@ bin.includes = META-INF/,\
                about.mappings,\
                about.ini,\
                about.html,\
-               jboss_about.png
+               jboss_about.png,\
+               lib/
