added reference to m2e-wtp repository to fix the build
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@43342 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/pom.xml
+++ b/central/pom.xml
@@ -27,5 +27,18 @@
 		<module>tests</module>
 		<module>site</module>
 	</modules>
+	<repositories>
+		<repository>
+			<id>jbosstools-m2e-wtp-mirror</id>
+			<layout>p2</layout>
+			<url>http://download.jboss.org/jbosstools/updates/requirements/m2eclipse/m2e-wtp-juno/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
 	
