--- a/examples/plugins/org.jboss.tools.community.project.examples/plugin.properties
+++ b/examples/plugins/org.jboss.tools.community.project.examples/plugin.properties
@@ -2,6 +2,7 @@ BundleVendor = JBoss by Red Hat
 BundleName = JBoss Tools Community Project Examples
 JBoss_Tools_Community_Examples = JBoss Tools 3.1 Community Examples
 JBoss_Tools_Community_Maven_Examples = JBoss Tools 3.2 Community Maven Examples
-JBoss_Tools_33_Community_Maven_Examples = JBoss Tools 3.3 Community Maven Examples
+JBoss_Tools_4x_Community_Maven_Examples = JBoss Tools 4.0 Community Maven Examples
 JBoss_Tools_Community_BPEL_Examples=JBoss Tools Community BPEL Examples
 JBoss_Tools_32_Community_Examples=JBoss Tools 3.2 Community_Examples
+JBoss_Tools_40_Community_GateIn_Portal_Examples =JBoss Tools 4.0 Community GateIn Portal Examples
