--- a/examples/plugins/org.jboss.tools.community.project.examples/plugin.xml
+++ b/examples/plugins/org.jboss.tools.community.project.examples/plugin.xml
@@ -32,14 +32,22 @@
   </extension>
   <extension
         point="org.jboss.tools.project.examples.projectExamplesXml"
-        name="%JBoss_Tools_33_Community_Maven_Examples">
-        <url>http://download.jboss.org/jbosstools/examples/project-examples-maven-3.3.xml</url>
+        name="%JBoss_Tools_4x_Community_Maven_Examples">
+        <url>http://download.jboss.org/jbosstools/examples/project-examples-maven-4.0.Alpha1.xml</url>
         <experimental>false</experimental>
   </extension>
   
   <extension
         point="org.jboss.tools.project.examples.categories"
         name="Project Examples Categories">
-        <url>http://download.jboss.org/jbosstools/examples/project-examples-category-jbosstools-3.3.xml</url>
+        <url>http://download.jboss.org/jbosstools/examples/project-examples-category-jbosstools-4.0.xml</url>
     </extension>
+    
+  <extension
+        point="org.jboss.tools.project.examples.projectExamplesXml"
+        name="%JBoss_Tools_40_Community_GateIn_Portal_Examples">
+         <url>https://github.com/downloads/ppalaga/gatein-portal-quickstart/project-examples-gatein-4.0.xml</url>
+        <experimental>true</experimental>
+  </extension>    
+   
 </plugin>
