Fix theme labels
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@43993 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central.themes/plugin.xml
+++ b/central/plugins/org.jboss.tools.central.themes/plugin.xml
@@ -6,12 +6,12 @@
       <theme
             basestylesheeturi="css/jbt.css"
             id="org.jboss.tools.central.themes.jbds"
-            label="JBoss Tools &amp; Developer Studio">
+            label="JBoss Tools - Red">
       </theme>
       <theme
             basestylesheeturi="css/jboss.css"
             id="org.jboss.tools.central.themes.community"
-            label="JBoss Community Theme">
+            label="JBoss Tools - Blue">
       </theme>
    </extension>
 
