JBIDE-11997 Move the hibernate templates and library providers out of org.jboss.tools.maven.core into org.jboss.tools.maven.hibernate
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@44184 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.hibernate/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.hibernate/plugin.properties
@@ -1,4 +1,8 @@
 Bundle-Vendor = JBoss by Red Hat
 Bundle-Name = JBoss Maven Hibernate Configurator
 Hibernate_Project_configurator = Hibernate
+Maven_Hibernate_library_provider=Maven Hibernate library provider
+Hibernate_3_3_2_Libraries=Hibernate 3.3.2 Libraries
+Hibernate_3_6_X_Libraries=Hibernate 3.6.10 Libraries
+Hibernate_4_1_X_Libraries=Hibernate 4.1.1 Libraries
 
