JBIDE-12527 : convert EAR references
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@44218 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.conversion.ui/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.conversion.ui/plugin.xml
@@ -39,9 +39,16 @@
          point="org.eclipse.m2e.core.projectConversionParticipants">
       <projectConversionParticipant
             class="org.jboss.tools.maven.conversion.ui.internal.ClasspathConversionParticipant"
-            id="org.jboss.tools.maven.conversion.ui.internal.ClasspathConversionParticipant"
+            id="org.jboss.tools.maven.conversion.ui.ClasspathConversionParticipant"
             name="Classpath conversion participant"
             nature="org.eclipse.jdt.core.javanature">
       </projectConversionParticipant>   
+      <projectConversionParticipant
+            class="org.jboss.tools.maven.conversion.ui.internal.ClasspathConversionParticipant"
+            id="org.jboss.tools.maven.conversion.ui.ModuleConversionParticipant"
+            name="EAR conversion participant"
+            nature="org.eclipse.wst.common.modulecore.ModuleCoreNature">
+      </projectConversionParticipant>   
     </extension>   
+    
 </plugin>
