--- a/site/pom.xml
+++ b/site/pom.xml
@@ -4,12 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.jboss.tools</groupId>
-		<artifactId>central</artifactId>
-		<version>1.1.0-SNAPSHOT</version>
+		<artifactId>central.maven.examples.all</artifactId>
+		<version>4.0.0-SNAPSHOT</version>
 	</parent>
-	<groupId>org.jboss.tools.central</groupId>
+	<groupId>org.jboss.tools</groupId>
 	<artifactId>central.site</artifactId>
-	<name>central.site</name>
 	<packaging>eclipse-repository</packaging>
 
 	<properties>
