update to latest from trunk

--- a/examples/plugins/org.jboss.tools.project.examples/build.properties
+++ b/examples/plugins/org.jboss.tools.project.examples/build.properties
@@ -10,5 +10,4 @@ bin.includes = META-INF/,\
                about.mappings,\
                about.properties,\
                schema/,\
-               jboss_about.png,\
-               OSGI-INF/
+               jboss_about.png
