--- a/maven/plugins/org.jboss.tools.maven.project.examples/build.properties
+++ b/maven/plugins/org.jboss.tools.maven.project.examples/build.properties
@@ -16,5 +16,5 @@ bin.includes = META-INF/,\
                lib/httpcore-4.0.1.jar,\
                lib/jboss-logging-3.1.2.GA.jar,\
                lib/snakeyaml-1.10.jar,\
-               lib/stacks-client-1.0.0.CR2.jar
+               lib/stacks-client-1.0.0.Final.jar
 src.includes = src/
